# public-dataset-collection-game

./: .mypy.ini  bayes-opt.ipynb  pyproject.toml
notebooks/: bayes-opt-rl.ipynb  figures.ipynb  rotting-bandits-rl.ipynb
src/public_datasets_game/: bayes_opt.py  mechanism.py  pdg.py  rotting_bandits.py
tests/: test_env.py
